--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,82 @@
+<div class="container-fluid">
+  <div class="row mb-2">
+    <div id="containerNav" class="col-lg-12">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand px-5 py-3" href="#">
+          <img src="../../../assets/Logo.png" width="150" height="60" class="d-inline-block align-top" alt=""
+            loading="lazy">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item  pr-3">
+              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Inicio <span
+                  class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item px-3">
+              <a routerLink="/createEmployees" routerLinkActive="active" class="nav-link" href="#">Empleados</a>
+            </li>
+            <li class="nav-item px-3">
+              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Pedidos</a>
+            </li>
+            <li class="nav-item px-3">
+              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Finanzas</a>
+            </li>
+            <li class="nav-item px-3">
+              <a routerLink="/home" routerLinkActive="active" class="nav-link" href="#">Despacho</a>
+            </li>
+          </ul>
 
-<router-outlet></router-outlet>
+          <li id="searchButton" class="nav-item dropdown navbar-text">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Buscar
+            </a>
+            <ul class="dropdown-menu dropdown-menu-lg-right text-center" aria-labelledby="navbarDropdownMenuLink">
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+                  href="#">Empleados</a>
+                <ul class="dropdown-menu">
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Crear Empleado</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Ver Empleado</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Modificar</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Eliminar*</a>
+                </ul>
+              </li>
+              <li><a class="dropdown-item" href="#">Pedidos</a></li>
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+                  href="#">Finanzas</a>
+                <ul class="dropdown-menu">
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Finanzas</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">Registro</a>
+                </ul>
+              </li>
+
+              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown"
+                  href="#">Despacho</a>
+                <ul class="dropdown-menu">
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">A</a>
+                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item" href="#">b</a>
+                </ul>
+              </li>
+            </ul>
+          </li>
+
+
+          <picture>
+            <img id="userLogo" src="../../../assets/Iconos/people.svg" width="45" height="45"
+              class="d-inline-block align-top mx-4" alt="" loading="lazy">
+          </picture>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+</div>
