--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <div *ngIf="token" class="row">
     <div id="containerNav" class="col-lg-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand px-5 py-3" href="#">
-          <img src="../../../assets/Logo.png" width="150" height="60" class="d-inline-block align-top" alt=""
+        <a class="navbar-brand px-5 py-2" href="#">
+          <img src="../../../assets/Logo.png" width="100" height="ms-auto" class="d-inline-block align-top" alt=""
             loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
